[tool.poetry]
name = "quicken"
version = "0.1.0.dev0"
description = "Make Python apps fast."
authors = ["Chris Hunt <chrahunt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
python-daemon = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
