[tool.poetry]
name = "quicken"
version = "0.1.0"
description = "Make Python apps fast."
authors = ["Chris Hunt <chrahunt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chrahunt/quicken"
repository = "https://github.com/chrahunt/quicken"

[tool.poetry.dependencies]
python = "^3.7"
python-daemon = "^2.2"
pid = "^2.2"
psutil = "^5.4"
tblib = "^1.3"
fasteners = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
psutil = "^5.4"
coverage = "^4.5"
sphinx = "^1.8"
sphinx_autodoc_typehints = "^1.5"
wrapt = "^1.10"
pydevd = "^1.4"
pytest-asyncio = "^0.9.0"
tid = "^0.2.0"
watchdog = "^0.9.0"
pytest-mock = "^1.10"
sphinxcontrib-trio = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
