[tool.poetry]
name = "quicken"
version = "0.1.0"

authors = ["Chris Hunt <chrahunt@gmail.com>"]
description = "Make Python apps fast."
documentation = "https://quicken.readthedocs.io/en/latest/"
homepage = "https://github.com/chrahunt/quicken"
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrahunt/quicken"

[tool.poetry.dependencies]
python = "^3.7"
pid = "^2.2"
tblib = "^1.3"
fasteners = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
psutil = "^5.4"
coverage = "^4.5"
sphinx = "^1.8"
sphinx_autodoc_typehints = "^1.5"
wrapt = "^1.10"
process-tracker = { version = "^0.1", platform = "linux" }
pydevd = "^1.4"
pytest-asyncio = "^0.9.0"
tid = { version = "^0.2.0", platform = "linux" }
watchdog = "^0.9.0"
pytest-mock = "^1.10"
sphinxcontrib-trio = "^1.0"
ch = "^0.1.2"
pytest-benchmark = "^3.2"
m2r = "^0.2.1"
pygments-github-lexers = "^0.0.5"
python-ptrace = "^0.9.3"

[tool.poetry.scripts]
quicken = "quicken._cli:main"
quickenc = "quicken.script:quicken._cli._.main"
quickenctl = "quicken.ctl_script:quicken._cli._.main"

[build-system]
requires = ["poetry>=0.12", "rtd-poetry"]
build-backend = "rtd_poetry"
